<resources>
    <string name="app_name">Shok\'o</string>

    <!-- Navbar -->
    <string name="home">Accueil</string>
    <string name="cart">Panier</string>
    <string name="profile">Profil</string>

    <!-- Profile -->
    <string name="loginDto">Se connecter</string>
    <string name="email">Email</string>
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="address">Adresse</string>
    <string name="city">Ville</string>
    <string name="postalcode">Code postal</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connexion</string>
    <string name="unspecified">- Non renseigné -</string>
    <string name="profile_saved">Profile modifié avec succés</string>
    <string name="credit_card_saved">Carte bancaire enregistrée avec succés</string>

    <string name="register">S\'inscrire</string>
    <string name="validate">Valider</string>
    <string name="validate_my_cart">Valider mon panier</string>
    <string name="mail_invalid">L\'adresse mail n\'est pas valide</string>
    <string name="mail_empty">L\'adresse mail doit être renseigné</string>
    <string name="complete_password">Veuillez renseigner votre mot de passe</string>
    <string name="you_are_disconnected">Vous êtes déconnecté</string>
    <string name="save">Sauvegarder</string>
    <string name="edit">Modifier</string>
    <string name="logout">Déconnecter</string>
    <string name="edit_profil">Modifier profile</string>
    <string name="add_credit_card">Ajouter une carte de crédit</string>
    <string name="autorise_stripe_info">J\'autorise Stripe à envoyer des instructions à l\'institution financière qui a émis ma carte pour prélever des paiements sur mon compte de carte conformément aux termes de l\'accord que j\'ai passé avec vous.</string>

    <!-- Inscription -->
    <string name="register_title">Inscription</string>
    <string name="finish_register">Finaliser l\'inscription</string>
    <string name="popUp_message_OK">"Vous allez recevoir un e-mail de confirmation pour saisir votre mot de passe, une fois que ceci sera fait vous pourrez désormais vous connecter avec vos identifiants</string>

    <string name="button_popUp_OK">OK</string>
    <string name="button_popUp_cancel">Annuler</string>

    <!-- List -->
    <string name="list_empty">Aucun résultat</string>
    <string name="search">Rechercher...</string>

    <!-- Products list -->
    <string name="product_image_description">Image chocolat</string>

    <!-- User error -->
    <string name="cannot_get_user">Une erreur est survenue lors de la récupération de vos donneées</string>
    <string name="bad_credentials">L\'email ou le mot de passe est incorrect</string>
    <string name="cannot_update_user">Une erreur est survenue lors de la mise à jour de vos donneées</string>
    <string name="error_call_api">Un problème est survenu lors de l\'appel au serveur</string>

    <!-- Inscription error !-->
    <string name="mail_already_using">Adresse mail déjà utilisée, veuillez en saisir une nouvelle</string>

    <!-- Progressbar -->
    <string name="loading_in_progress">Chargement en cours...</string>

    <!-- No internet -->
    <string name="no_internet_access">Vous n\'êtes pas connecté à Internet</string>

    <!-- Currency -->
    <string name="euro_symbol">€</string>

    <!-- Product detail -->
    <string name="detail">Détail</string>
    <string name="add_cart">Ajouter au panier</string>
    <string name="see_cart">Voir mon panier</string>
    <string name="product_added_to_cart">Produit ajouté au panier avec succès</string>
    <string name="quantity_modified_to_cart">Quantité modifiée avec succès</string>
    <string name="error_add_cart">Erreur lors de l\'ajout au panier</string>
    <string name="error_load_product">Erreur lors du chargement du produit</string>
    <string name="modify_quantity_product">Modifier la quantité</string>

    <!-- Cart -->
    <string name="remove">Retirer</string>
    <string name="quantity">Quantité</string>
    <string name="information">Information</string>
    <string name="delete_product">Êtes-vous sûr de vouloir supprimer ce produit de votre panier ?</string>

    <!-- Order -->
    <string name="resume_order">Récapitulatif de la commande</string>
    <string name="total">Total</string>
    <string name="confirm_command">Confirmer la commande</string>
    <string name="next">Continuer</string>
    <string name="dash">-</string>
    <string name="x">x</string>
    <string name="my_products">Mes produits</string>
    <string name="resume">Résumé</string>
    <string name="payement_method">Moyen de paiement</string>
    <string name="my_credit_cards_saved">Mes cartes bancaires enregistrées</string>
    <string name="use_credit_cards_saved">Utiliser une carte bancaire enregistrée</string>
    <string name="my_cards">Mes cartes</string>
    <string name="credit_card_selected">Carte sélectionnée</string>
    <string name="command_ended">Commande terminée</string>
    <string name="select_credit_card">Sélectionner une carte</string>
    <string name="error_during_payment">Une erreur technique est survenue lors de votre paiement., veuillez ressayer ultérieurement.</string>
    <string name="default_card">(défaut)</string>
    <string name="back_to_home">Retourner à l\'accueil</string>
    <string name="order_confirmer_successfully">Votre commande a été effectuée avec succès !</string>

    <!-- EditText Hint -->
    <string name="complete_password_hint"><font size="15">Saisir votre mot de passe</font></string>
    <string name="complete_adresse_mail_hint"><font size="15">Saisir votre adresse mail</font></string>
    <string name="complete_lastname_hint"><font size="15">Saisir votre nom</font></string>
    <string name="owner_card">Titulaire de la carte</string>
    <string name="complete_firstname_hint"><font size="15">Saisir votre prénom</font></string>
    <string name="complete_address_hint"><font size="15">Saisir votre adresse</font></string>
    <string name="complete_city_hint"><font size="15">Saisir votre ville</font></string>
    <string name="complete_postalcode_hint"><font size="15">Saisir votre code postal</font></string>

    <!-- Throw error -->
    <string name="manage_step_order_init">Vous devez appeler la methode \'init\' avant de vouloir naviguer avec le stepper</string>
    <string name="validate_3d_secure">Il est nécessaire de valider l\'étape 3D Secure pour pouvoir valider la commande</string>

    <!-- Liste des cartes de credits -->
    <string name="expiration_date">Expire le :</string>
    <string name="card_index">Carte n°</string>
    <string name="stars_cb_number"><font size="15">**** **** ****</font></string>
    <string name="delete_card">Suppression carte bancaire</string>
    <string name="confirm_delete_card">Etes-vous sûr de vouloir supprimer cette carte de votre liste ?</string>
    <string name="select_payment_method">Veuillez sélectionner un moyen de paiement</string>
    <string name="credit_card_deleted_sucessfully">Carte bancaire supprimée avec succés</string>
    <string name="credit_card_set_default_sucessfully">La carte par défaut a été modifiée avec succés</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="credit_card">Carte bancaire</string>
    <string name="save_credit_card">Enregistrer cette carte bancaire</string>
    <string name="want_to_save_credit_card">Voulez-vous enregistrer cette carte bancaire pour vos prochaines commandes ?</string>

    <!-- ressources quantities -->
    <string-array name="quantities_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="quantities_array_cart">
        <item>QTÉ : 1</item>
        <item>QTÉ : 2</item>
        <item>QTÉ : 3</item>
        <item>QTÉ : 4</item>
        <item>QTÉ : 5</item>
        <item>QTÉ : 6</item>
        <item>QTÉ : 7</item>
        <item>QTÉ : 8</item>
        <item>QTÉ : 9</item>
        <item>QTÉ : 10</item>
    </string-array>

</resources>
