<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.home.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tw_connect"
                style="@style/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="0dp"
                android:text="@string/connect"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:text="@string/email"
                android:fontFamily="@font/inter_medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:hint="@string/complete_adresse_mail_hint"
                android:textColorHint="@color/colorDarkGrey"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:text="@string/password"
                android:fontFamily="@font/inter_medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:hint="@string/complete_password_hint"
                android:textColorHint="@color/colorDarkGrey"
                android:drawableEnd="@drawable/ic_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="143dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="143dp"
                android:layout_marginBottom="20dp"
                android:text="@string/loginDto"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/inter_bold"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="143dp"
                android:layout_marginEnd="143dp"
                android:layout_marginBottom="40dp"
                android:text="@string/register"
                android:background="@drawable/rounded_button_white_bg"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/inter_bold"/>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/progressBar_connexion"
        android:visibility="gone"
        layout="@layout/progress_bar"/>
</FrameLayout>