<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/tw_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="0dp"
                android:text="@string/register_title"
                android:textAlignment="center"
                style="@style/Title"/>

            <TextView
                android:id="@+id/tw_email_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/email"
                android:fontFamily="@font/inter_medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editText_email_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/complete_adresse_mail_hint"
                android:textColorHint="@color/colorDarkGrey"
                android:drawableEnd="@drawable/ic_email"/>

            <Button
                android:id="@+id/btn_inscription"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="143dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="143dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/inter_bold"/>

            <ImageView
                android:layout_width="225dp"
                android:layout_height="136dp"
                android:src="@drawable/ic_image_inscription"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/progressBar_inscription"
        android:visibility="gone"
        layout="@layout/progress_bar"/>
</FrameLayout>