<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.order.fragments.SelectCreditCardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/stepper_select_credit_cards"
                layout="@layout/stepper_order"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cw_resume_total_select_credit_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stepper_select_credit_cards">

                <TextView
                    android:id="@+id/tw_resume_select_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/resume"
                    android:fontFamily="@font/inter_light"/>

                <TextView
                    android:id="@+id/tw_label_total_select_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/total"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/tw_total_select_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:textAlignment="textEnd"
                    android:textSize="15sp"
                    android:fontFamily="@font/inter_bold"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cw_enter_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cw_resume_total_select_credit_card">

                <TextView
                    android:id="@+id/tw_enter_payement_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/credit_card"
                    android:textColor="@color/colorPrimaryDark"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_up_black_24dp"/>

                <include
                    android:id="@+id/include_enter_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    layout="@layout/fragment_credit_card"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cw_list_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cw_enter_credit_card">

                <TextView
                    android:id="@+id/tw_choose_payement_select_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/use_credit_cards_saved"
                    android:textColor="@color/colorPrimaryDark"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"/>

                <Spinner
                    android:id="@+id/spinner_credit_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"
                    android:dropDownWidth="50dp"
                    android:prompt="@string/select_credit_card"
                    android:spinnerMode="dialog"/>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_confirm_command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cw_list_credit_card"
                app:layout_constraintVertical_bias="0.123" />

            <Button
                android:id="@+id/btn_add_credit_card_command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_white_bg"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/add_credit_card"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_confirm_command" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <include
        android:id="@+id/progressBar_list_cards_user"
        android:visibility="gone"
        layout="@layout/progress_bar"/>
</FrameLayout>