<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tw_product_name_resume_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/img_product_resume_order"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_product_resume_order"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/product_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tw_product_label_qty_resume_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/x"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_product_name_resume_order"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/tw_product_qty_resume_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter_light"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tw_product_price_resume_order"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/tw_product_label_qty_resume_order"
        app:layout_constraintTop_toBottomOf="@+id/tw_product_name_resume_order"
        app:layout_constraintVertical_bias="0.50" />

    <TextView
        android:id="@+id/tw_dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_light"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/tw_product_label_qty_resume_order"
        app:layout_constraintTop_toBottomOf="@+id/tw_product_name_resume_order" />

    <TextView
        android:id="@+id/tw_product_price_resume_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/inter_light"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tw_dash"
        app:layout_constraintTop_toBottomOf="@+id/tw_product_name_resume_order"
        app:layout_constraintVertical_bias="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>